# Acta

./: .env  .env.example  .gitignore  .mcp.json  AGENTS.md  CLAUDE.md  Cargo.toml  build.rs  start-pg.sh  temp_update_vault_round2.ps1  tmp_figma_ui_spec_updated.md
.claude/: code-review.md  figma-design-system-rules.md  lessons.md  settings.local.json
.sqlx/: query-2d12086c9e79d03845a382c7888e8d070422e9cba411bd0443535eb1c46a7d8a.json  query-34ef0e3fbbb2f5031ce3d2a1a1293c23c809046c8c415d9a2baec1ad43f04ceb.json  query-3f268f2d7d87168dc75648d519c6056b69f9c922c962b3b234a2163e292e4706.json  query-3f9d3cbf22449ba8a48379f0227d6caedc6d767c9293eab10e9ed729964553d4.json  query-4ec75eadb5e6e02f5b35a7d9042056a4b5ee0c6d87931cb98e1322bf73cfdb78.json  query-56a47ec0665e95c0636cde94c658746be61d36a345bf915ebef1fc2f1c179578.json  query-56cd2904fd7ff02346cae9567dd8395589b2ebd53ac6d98a2b2b77c082d11bbf.json  query-57a7c8ca9b95d12947c26919c6cc69d5a298c92c42d998062dc170ca194cb454.json  query-5f988084a84e8df634a0f555fed571fba0f7f49fd50fa6703853f59e9abd66bc.json  query-71952a8ea0f0e252f5445c594736f64e7c3487ecf61bee4c30a84a606746672f.json  query-8255bee3cd996215948ef119b42f34cf358ad6328bab30a83759127eebe9101d.json  query-8ece5865b1c18bb84ebda98bf1a60b012104972001a8931e94b09e435dc1ed95.json  query-946506c61cdcd788aa09f8587e8a00bbedeac7e124846d1a51f2d4ebc982b918.json  query-992c7fa1a77efcb5d7d74f298c68e5739687c2ee3cc522d552e5862b55010004.json  query-995ce722ca43cc9e260a92714f881fb677fb14bf45d113106c9d0bbb40ffc61f.json  query-a0dcb2dd944ff3d6c2f6620af089e2bced23f7a49b906832db4547d328675a94.json  (+10 more)
(+99 files in other folders)
