[package]
name = "acta"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "acta"
path = "src/main.rs"

[[bin]]
name = "migrate"
path = "src/bin/migrate.rs"

[[bin]]
name = "reseed"
path = "src/bin/reseed.rs"

[dependencies]
# UI
slint = "1.15"

# БД
sqlx = { version = "0.8", features = [
    "runtime-tokio",
    "postgres",
    "uuid",
    "chrono",
    "rust_decimal",
    "macros",
] }

# Async runtime
tokio = { version = "1", features = ["full"] }

# PDF
lopdf = "0.34"

# Файловий моніторинг
notify = "6"

# Desktop-сповіщення (To-Do нагадування)
notify-rust = { path = "vendor/notify-rust" }

# XML парсинг (BAS імпорт)
quick-xml = { version = "0.37", features = ["serialize"] }

# Excel (BAS імпорт)
calamine = "0.26"

# CSV (банківські виписки)
csv = "1"

# Фінансові суми — ОБОВ'ЯЗКОВО замість f64
rust_decimal = "1"
rust_decimal_macros = "1"

# Дати
chrono = { version = "0.4", features = ["serde"] }

# UUID
uuid = { version = "1", features = ["v4", "serde"] }

# Серіалізація
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Error handling
anyhow = "1"
thiserror = "2"

# Логування
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# .env файл
dotenvy = "0.15"

# Конфігурація (config.rs) — збереження налаштувань між сесіями
toml = "0.8"
dirs = "5"

# Відкриття файлів у системному переглядачі (крос-платформно)
open = "5"

[build-dependencies]
slint-build = "1.15"
